--- a/project.html
+++ b/project.html
@@ -30,7 +30,94 @@
     </header>
     <center>
         <ul class="list-non-bulit nav-pills">
+            <div class="box"></div>
+                <li class="list-item-inline ">
+                    <h1>Learn-Triangles</h1>
+                    <small>December 2021</small>
+                    <p>A website which helps you to learn about triangles</p>
+                    <br>
+                    <a class="link link-primary" href="">Live Progect</a>
+                    <a class="link link-secondary" href="">View Source</a>
+                </li>
+            </div>
+            <div>
+            <li class="list-item-inline">
+                <h1>Is Your Birthday Lucky</h1>
+                <small> December 2021</small>
+                <p>A website which can help you to check whether your birthday is lucky or not.</p>
+                <br>
+                <a class="link link-primary" href="">Live Progect</a>
+                <a class="link link-secondary" href="">View Source</a>
+            </li>
+            </div>
+            <div class="box">
+                <li class="list-item-inline ">
+                    <h1>Cash-Register-Manager
+
+                    </h1>
+                    <small>December 2021</small>
+                    <p>A cash register manager which helps the user by telling how can he/she return the change to the
+                        customer with minimum number of notes.
+
+                    </p>
+                    <br>
+                    <a class="link link-primary" href="">Live project</a>
+                    <a class="link link-secondary" href="">view source</a>
+                </li>
+            </div>
+
             <li class="list-item-inline ">
+                <h1>goodbooks
+                </h1>
+                <small>December 2021</small>
+                <p>Do you read books? You would find some good recommendations for all the genre. Made using ReactJS
+                    with love
+
+                </p>
+                <br>
+                <a class="">Live project</a>
+                <a class="link link-secondary" href="">view source</a>
+            </li>
+            <div class="box">
+                <li class="list-item-inline ">
+                    <h1>Emoji Finder
+                    </h1>
+                    <small>December 2021</small>
+                    <p>I struggle with understanding the emojis. Do you too? If yes, then see this library of emojis
+                        with meaning. </p>
+                    <br>
+                    <a class="link link-primary" href="">Live project</a>
+                    <a class="link link-secondary" href="">view source</a>
+                </li>
+            </div>
+
+            <li class="list-item-inline ">
+                <h1>Swedish Chef Speak
+                </h1>
+                <small>December 2021</small>
+                <p>Convert from English to Swedish chef Speak. The Swedish Chef is a Muppet character that appeared on
+                    The Muppet Show. The Swedish Chef does not speak any known language, but his nonsense words are so
+                    widley interpreted as Swedish-sounding. So try converting and see what our chef says...bork, bork,
+                    bork!</p>
+                <br>
+                <a class="link link-primary" href="">Live project</a>
+                <a class="link link-secondary" href="">view source</a>
+            </li>
+            <br>
+            <div class="box">
+                <li class="list-item-inline ">
+                    <h1>Minionese
+                    </h1>
+                    <small>December 2021</small>
+                    <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the
+                        translator to convert your text from English to Minion speak or Banana language.
+
+                    </p>
+                    <br>
+                    <a class="link link-primary" href="">Live project</a>
+                    <a class="link link-secondary" href="">view source</a>
+                </li>
+            </div>
                 <h1>Do you know about HTML?</h1>
                 <small>December 2021</small>
                 <p>Do you know about me? <strong>Let's play a quiz and see</strong></p>
