--- a/project.html
+++ b/project.html
@@ -67,7 +67,7 @@
             </div>
 
             <li class="list-item-inline ">
-                <h1>goodbooks
+                <h1>Goodbooks
                 </h1>
                 <small>December 2021</small>
                 <p>Do you read books? You would find some good recommendations for all the genre. Made using ReactJS
@@ -75,8 +75,8 @@
 
                 </p>
                 <br>
-                <a class="">Live project</a>
-                <a class="link link-secondary" href="">view source</a>
+                <a class="link link-primary" href="https://8078i.csb.app/">Live project</a>
+                <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark9th">view source</a>
             </li>
             <div class="box">
                 <li class="list-item-inline ">
@@ -86,8 +86,8 @@
                     <p>I struggle with understanding the emojis. Do you too? If yes, then see this library of emojis
                         with meaning. </p>
                     <br>
-                    <a class="link link-primary" href="">Live project</a>
-                    <a class="link link-secondary" href="">view source</a>
+                    <a class="link link-primary" href="https://j56lg.csb.app/">Live project</a>
+                    <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark8th">view source</a>
                 </li>
             </div>
 
