--- a/project.html
+++ b/project.html
@@ -30,14 +30,18 @@
     </header>
     <center>
         <ul class="list-non-bulit nav-pills">
-            <div class="box"></div>
+            <div class="box">
                 <li class="list-item-inline ">
                     <h1>Learn-Triangles</h1>
                     <small>December 2021</small>
                     <p>A website which helps you to learn about triangles</p>
                     <br>
                     <a class="link link-primary" href="">Live Progect</a>
-                    <a class="link link-secondary" href="">View Source</a>
+                    <a class
+                    Banana talk
+                    
+                    Translation will come here 👇
+                    ="link link-secondary" href="">View Source</a>
                 </li>
             </div>
             <div>
@@ -118,9 +122,9 @@
                     <a class="link link-secondary" href="">view source</a>
                 </li>
             </div>
-                <h1>Do you know about HTML?</h1>
+                <h1>Do you know about Himani?</h1>
                 <small>December 2021</small>
-                <p>Do you know about me? <strong>Let's play a quiz and see</strong></p>
+                <p>Do you know about Himani? <strong>Let's play a quiz and see</strong></p>
                 <br>
                 <a class="link link-primary"
                     href="https://replit.com/@Himanipalariya/secondtask#index.js?embed=1&output=1">Live project</a>
