css style change

--- a/project.html
+++ b/project.html
@@ -33,7 +33,7 @@
             <div class="box">
                 <li class="list-item-inline">
                     <h1>Profit-or-Loss  </h1>
-                    <small>December, 2021</small>
+                    <small>December 2021</small>
                     <p>  A website which helps user how much profit or loss he/she is making in percentage & absolute value. </p>
                     <br>
                     <a class="link link-primary" href="https://loving-swartz-20e71e.netlify.app/">Live Project</a>
