--- a/blog.html
+++ b/blog.html
@@ -76,10 +76,10 @@
                 <a class="link" href="https://github.com/Himani1010/">Github</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Linkdin</a>
+                <a class="link" href="https://www.linkedin.com/in/himani-palariya-58995a225">Linkdin</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Twitter</a>
+                <a class="link" href="https://twitter.com/himani_palariya?t=G0-DNNf0f6_e81qFnfPG_w&s=08">Twitter</a>
             </li>
         </ul>
     </footer>
