--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
                 <a class="link link-primary" href="/my_page.html">Read More</a>
             </li>
             
-            <div class="box">
+            <!-- <div class="box"> -->
                 <ul class="list-non-bulit nav-pills">
                     <li class="list-item-inline ">
                         <h1>Nainital </h1>
@@ -64,7 +64,7 @@
                         <a class="link link-primary"
                             href="https://www.multimediamissions.com/post/life-is-to-be-valued-daily">Read More</a>
                     </li>
-            </div>
+            <!-- </div> -->
 
         </ul>
     </center>
