--- a/blog.html
+++ b/blog.html
@@ -34,37 +34,41 @@
 
         <ul class="list-non-bulit nav-pills">
             <li class="list-item-inline ">
-                <h1>Uttarakhand</h1>
+                <h1>My state Uttarakhand</h1>
                 <!-- <small>December 2021</small> -->
+                <div class="box">
                 <p>
                     Uttarakhand, formerly Uttaranchal, state of India, located in the northwestern part of the country. It is bordered to the northwest by the Indian state of Himachal Pradesh, to the northeast by the Tibet Autonomous Region of China, to the southeast by Nepal, and to the south and southwest by the Indian state of Uttar Pradesh. Its capital is the northwestern city of DehraDun. </p>
                     <!-- <br> -->
+                    </div>
                 <img class="hero-image" src="images/Uttarakhand.jpg" />
 
                 <br>
                 <br>
-                <a class="link link-primary" href="/my_page.html">Read More</a>
+                        <a class="link link-primary" href="/my_page.html">Read More</a>
             </li>
             
             <!-- <div class="box"> -->
-                <ul class="list-non-bulit nav-pills">
-                    <li class="list-item-inline ">
-                        <h1>Nainital </h1>
+        <ul class="list-non-bulit nav-pills">
+            <li class="list-item-inline ">
+                <h1>My City Nainital </h1>
                         <!-- <small>December 2021</small> -->
+                        <div class="box">
                         <p>
 
                             Nainital, the charming Himalayan lake town, is a picture-postcard perfect hill-station and one of the most popular in Northern India. Commonly known as the ‘Lake District’, Nainital is nestled high up in the Kumaon Himalayas at an altitude of around 2,000 m above sea level. This beautiful town in surrounded by seven hills, popularly known as ‘Sapta-Shring’ – Ayarpata, Deopata, Handi-Bandi, Naina, Alma, Lariya-Kanta and Sher-Ka-Danda. The majestic mountains and the sparkling waters of the lake add an immense lot to the beauty of the town.  The town is centred around the emerald mountain lake Naini, which on most days is dotted with colourful sailboats. According to mythology, the lake is believed to have been formed when the eyes of goddess “Sati” fell at this spot while her body was being carried by Lord Shiva after her death. 
 
                             The summer capital of the United Provinces during the British era, the town has a strong colonial heritage with vibrant clusters of villas and bungalows. Homesick Britishers used to flock to this quaint town spread over a forested valley. It is also known for the revered Naina Devi temple, which stands on the edge of the lake. Nainital is not only a famous tourist destination but is also known for its prestigious educational institutions and schools, which have stood since the British era.</p>
-                        <br>
+                            </div>
+                    
                         <img class="hero-image" src="images/nainital.webp" />
                         <br>
                         <br>
 
                         <a class="link link-primary"
-                            href="https://www.multimediamissions.com/post/life-is-to-be-valued-daily">Read More</a>
-                    </li>
-            <!-- </div> -->
+                            href="">Read More</a>
+                    </li> 
+            <!-- </div>
 
         </ul>
     </center>
