--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1>Blogs</h1>
             <p>Blogging is a communications mechanism handed to us by the long tail of the Internet.</p>
         </div>
-        <center><a class="link link-secondary" href="blog.html">Read Bolgs</a></center>
+        <center><a class="link link-secondary" href="blog.html">Read Blogs</a></center>
     </section>
     <br>
 
