--- a/my_page.html
+++ b/my_page.html
@@ -29,9 +29,7 @@
         <h2>Know About the Culture of Uttarakhand</h2>
     </header>
     <div class="box">
-
-    <p>
-    <b>Uttarakhand</b>, also known as <i><b>Dev Bhoomi</b></i>, has been the centre of religious and spiritual knowledge for ages. The history and culture of Uttarakhand are deeply connected with religion and celebrated everywhere. Many cultures and ethnicities coexist here with peace and harmony. Most of the state is divided into two regions named Garhwal and Kumaon. It is also home to Jaunsaries, Tibetan refugees, Bokshas, among others.</p>
+    <p><b>Uttarakhand</b>, also known as <i><b>Dev Bhoomi</b></i>, has been the centre of religious and spiritual knowledge for ages. The history and culture of Uttarakhand are deeply connected with religion and celebrated everywhere. Many cultures and ethnicities coexist here with peace and harmony. Most of the state is divided into two regions named Garhwal and Kumaon. It is also home to Jaunsaries, Tibetan refugees, Bokshas, among others.</p>
         
         
         <img class="hero-image" src="images/cul.jpeg" />
@@ -75,13 +73,21 @@
         <div class="footer-header">Social Media presence</div>
         <ul class="social-link list-non-bulit">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/Himani1010">Github</a>
+                <a class="link" href="https://github.com/Himani1010">
+                    <img class="link" src="images/git_logo.png" />
+
+                </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/himani-palariya-58995a225">Linkdin</a>
+                <a class="link" href="https://www.linkedin.com/in/himani-palariya-58995a225">
+                    <img class="link" src="images/in_logo.png" />
+
+                </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/himani_palariya?t=G0-DNNf0f6_e81qFnfPG_w&s=08">Twitter</a>
+                <a class="link" href="https://twitter.com/himani_palariya?t=G0-DNNf0f6_e81qFnfPG_w&s=08">
+                    <img class="link" src="images/twi_logo.png" />
+            </a>
             </li>
         </ul>
     </footer>
