--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">Himani</div>
+        <div class="nav-brand">Himani's Portfolio</div>
         <ul class="list-non-bulit nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/">Home</a>
@@ -31,7 +31,8 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>I'm familiar with HTML5, CSS3, Github, JavaScript, Python and Web Hosting , MS Office, English typing.</p>
+            <p> I'm familiar with HTML5, CSS3, Github, JavaScript, Python and Web Hosting , MS Office, English typing.
+            </p>
         </div>
 
     </section>
@@ -43,8 +44,8 @@
             <center><a class="link link-primary" href="/project.html">Visit projects</a></center>
         </div>
 
-	
-    
+
+
 
     </section>
     <section class="section ow">
@@ -61,13 +62,21 @@
         <div class="footer-header">Social Media presence</div>
         <ul class="social-link list-non-bulit">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/Himani1010">Github</a>
+                <a class="link" href="https://github.com/Himani1010">
+                    <img class="link" src="images/git_logo.png" height="70px" width="90px" style="position: relative; left:50px"/>
+
+                </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/himani-palariya-58995a225">Linkdin</a>
+                <a class="link" href="https://www.linkedin.com/in/himani-palariya-58995a225">
+                    <img class="link" src="images/in_logo.png" height="70px" width="90px" />
+
+                </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/himani_palariya?t=G0-DNNf0f6_e81qFnfPG_w&s=08">Twitter</a>
+                <a class="link" href="https://twitter.com/himani_palariya?t=G0-DNNf0f6_e81qFnfPG_w&s=08">
+                    <img class="link" src="images/twi_logo.png" height="70px" width="90px" style="position: relative; right:50px"/>
+                </a>
             </li>
         </ul>
     </footer>
@@ -75,4 +84,3 @@
 </body>
 
 </html>
-	
