--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navigation container">
-        <div class="nav-brand"> Himani's Portfolio </div>
+        <div class="nav-brand"> Himani'sPortfolio </div>
         <ul class="list-non-bulit nav-pills">
             <li class="list-item-inline">
                 <a class="link " href="/">Home</a>
@@ -32,7 +32,7 @@
         <ul class="list-non-bulit nav-pills">
             <div class="box">
                 <li class="list-item-inline">
-                    <h1>Profit-or-Loss </h1>
+                    <h1 style="position: relative; top:1px;">Profit-or-Loss </h1>
                     <small>December 2021</small>
                     <br>
                     <p> A website which helps user how much profit or loss he/she is making in percentage & absolute
