--- a/project.html
+++ b/project.html
@@ -26,7 +26,8 @@
     </nav>
     <header class="hero">
         <img class="hero-image" src="images/pro.svg" alt="image">
-        <h1 style="position: relative; top:50px;" class="hero-heading"> See My <span class="heading-invot">Projects</span> </h1>
+        <h1 style="position: relative; top:50px;" class="hero-heading"> See My <span
+                class="heading-invot">Projects</span> </h1>
     </header>
     <center>
         <ul class="list-non-bulit nav-pills">
@@ -37,21 +38,22 @@
                     <br>
                     <p> A website which helps user how much profit or loss he/she is making in percentage & absolute
                         value. </p>
-                        <br>
+                    <br>
                     <a class="link link-primary" href="https://loving-swartz-20e71e.netlify.app/">Live Project</a>
                     <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark14">View Source</a>
                 </li>
             </div>
 
-
-            <li class="list-item-inline">
-                <h1>Palindrome-Birthdays</h1>
-                <small>December 2021</small>
-                <p> App which checks whether your birthday is a palindrome birthday or not. </p>
-                <br>
-                <a class="link link-primary" href="https://flamboyant-murdock-5cd903.netlify.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark13">View Source</a>
-            </li>
+            <div class="bix">
+                <li class="list-item-inline">
+                    <h1>Palindrome-Birthdays</h1>
+                    <small>December 2021</small>
+                    <p> App which checks whether your birthday is a palindrome birthday or not. </p>
+                    <br>
+                    <a class="link link-primary" href="https://flamboyant-murdock-5cd903.netlify.app/">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark13">View Source</a>
+                </li>
+            </div>
 
             <div class="box">
                 <li class="list-item-inline ">
@@ -64,7 +66,8 @@
                     <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark12">View Source</a>
                 </li>
             </div>
-            <div>
+            <div class="bix">
+
                 <li class="list-item-inline">
                     <h1>Is Your Birthday Lucky</h1>
                     <small> December 2021</small>
@@ -85,20 +88,23 @@
 
                     </p>
                     <br>
+
                     <a class="link link-primary" href="https://trusting-bohr-dfe9a4.netlify.app/">Live project</a>
                     <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark10">view source</a>
                 </li>
             </div>
+            <div class="bix">
 
-            <li class="list-item-inline ">
-                <h1>Goodbooks</h1>
-                <small>December 2021</small>
-                <p>Do you read books? You would find some good recommendations for all the genre. Made using ReactJS
-                    with love.</p>
-                <br>
-                <a class="link link-primary" href="https://8078i.csb.app/">Live project</a>
-                <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark9th">view source</a>
-            </li>
+                <li class="list-item-inline ">
+                    <h1>Goodbooks</h1>
+                    <small>December 2021</small>
+                    <p>Do you read books? You would find some good recommendations for all the genre. Made using ReactJS
+                        with love.</p>
+                    <br>
+                    <a class="link link-primary" href="https://8078i.csb.app/">Live project</a>
+                    <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark9th">view source</a>
+                </li>
+            </div>
             <div class="box">
                 <li class="list-item-inline ">
                     <h1>Emoji Finder
@@ -111,20 +117,25 @@
                     <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark8th">view source</a>
                 </li>
             </div>
+            <div class="bix">
 
-            <li class="list-item-inline ">
-                <h1>Swedish Chef Speak
-                </h1>
-                <small>December 2021</small>
-                <p>Convert from English to Swedish chef Speak. The Swedish Chef is a Muppet character that appeared on
-                    The Muppet Show. The Swedish Chef does not speak any known language, but his nonsense words are so
-                    widley interpreted as Swedish-sounding. So try converting and see what our chef says...bork, bork,
-                    bork!</p>
-                <br>
-                <a class="link link-primary" href="https://adoring-clarke-a47c0e.netlify.app/">Live project</a>
-                <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark7">view source</a>
-            </li>
-            <br>
+
+                <li class="list-item-inline ">
+                    <h1>Swedish Chef Speak
+                    </h1>
+                    <small>December 2021</small>
+                    <p>Convert from English to Swedish chef Speak. The Swedish Chef is a Muppet character that appeared
+                        on
+                        The Muppet Show. The Swedish Chef does not speak any known language, but his nonsense words are
+                        so
+                        widley interpreted as Swedish-sounding. So try converting and see what our chef says...bork,
+                        bork,
+                        bork!</p>
+                    <br>
+                    <a class="link link-primary" href="https://adoring-clarke-a47c0e.netlify.app/">Live project</a>
+                    <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark7">view source</a>
+                </li>
+            </div>
             <div class="box">
                 <li class="list-item-inline ">
                     <h1>Minionese
@@ -139,15 +150,19 @@
                     <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark6">view source</a>
                 </li>
             </div>
-            <h1>Do you know about Himani?</h1>
-            <small>December 2021</small>
-            <p>Do you know about Himani? <strong>Let's play a quiz and see</strong></p>
-            <br>
-            <a class="link link-primary"
-                href="https://replit.com/@Himanipalariya/secondtask#index.js?embed=1&output=1">Live project</a>
-            <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark2">View source</a>
-            </li>
-            <br>
+            <div class="bix">
+                <li class="list-item-inline ">
+
+
+                    <h1>Do you know about Himani?</h1>
+                    <small>December 2021</small>
+                    <p>Do you know about Himani? <strong>Let's play a quiz and see</strong></p>
+                    <br>
+                    <a class="link link-primary"
+                        href="https://replit.com/@Himanipalariya/secondtask#index.js?embed=1&output=1">Live project</a>
+                    <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark2">View source</a>
+                </li>
+            </div>
             <div class="box">
                 <li class="list-item-inline ">
                     <h1>How much do you know about me?</h1>
@@ -165,13 +180,14 @@
     </center>
     <br>
     <br>
-    
+
     <footer class="footer">
         <div class="footer-header">Social Media presence</div>
         <ul class="social-link list-non-bulit">
             <li class="list-item-inline">
                 <a class="link" href="https://github.com/Himani1010">
-                    <img class="link" src="images/git_logo.png" height="70px" width="90px" style="position: relative; left:50px"/>
+                    <img class="link" src="images/git_logo.png" height="70px" width="90px"
+                        style="position: relative; left:50px" />
 
                 </a>
             </li>
@@ -183,7 +199,8 @@
             </li>
             <li class="list-item-inline">
                 <a class="link" href="https://twitter.com/himani_palariya?t=G0-DNNf0f6_e81qFnfPG_w&s=08">
-                    <img class="link" src="images/twi_logo.png" height="70px" width="90px" style="position: relative; right:50px"/>
+                    <img class="link" src="images/twi_logo.png" height="70px" width="90px"
+                        style="position: relative; right:50px" />
                 </a>
             </li>
         </ul>
