--- a/project.html
+++ b/project.html
@@ -125,12 +125,8 @@
                     </h1>
                     <small>December 2021</small>
                     <p>Convert from English to Swedish chef Speak. The Swedish Chef is a Muppet character that appeared
-                        on
-                        The Muppet Show. The Swedish Chef does not speak any known language, but his nonsense words are
-                        so
-                        widley interpreted as Swedish-sounding. So try converting and see what our chef says...bork,
-                        bork,
-                        bork!</p>
+                        on The Muppet Show. The Swedish Chef does not speak any known language, but his nonsense words are so
+                        widley interpreted as Swedish-sounding. So try converting and see what our chef says...bork, bork,bork!</p>
                     <br>
                     <a class="link link-primary" href="https://adoring-clarke-a47c0e.netlify.app/">Live project</a>
                     <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark7">view source</a>
@@ -145,7 +141,7 @@
                         translator to convert your text from English to Minion speak or Banana language.
 
                     </p>
-                    <br>
+    
                     <a class="link link-primary" href="https://nifty-ride-b1a257.netlify.app/">Live project</a>
                     <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark6">view source</a>
                 </li>
