--- a/blog.html
+++ b/blog.html
@@ -68,13 +68,11 @@
                         one of the most popular in Northern India. Commonly known as the <b>‘Lake District’</b>, Nainital
                         is nestled high up in the Kumaon Himalayas at an altitude of around 2,000 m above sea level.
                         The town is centred around the emerald mountain lake Naini, which on most days is dotted
-                        with colourful sailboats. According to my thology, the lake is believed to have been formed
-                        when the eyes of goddess “Sati” fell at this spot while her body was being carried by Lord
-                        Shiva after her death.
+                        with colourful sailboats.
 
                     </p>
 
-                    <img class="hero-image" src="images/nainital.webp" />
+                    <img class="hero-image" src="images/nainital.jpeg" />
                     <br>
                     <br>
 
