--- a/my_page.html
+++ b/my_page.html
@@ -10,98 +10,102 @@
 </head>
 
 <body>
-    <nav class="navigation container">
-        <div class="nav-brand">Himani's Portfolio</div>
-        <ul class="list-non-bulit nav-pills">
-            <li class="list-item-inline">
-                <a class="link link-active" href="/">Home</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="/projects.html">Projects</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="/blogs.html">Blog</a>
-            </li>
-        </ul>
-    </nav>
+
+
     <header class="hero">
-        <h1 class="hero-heading">What is <span class="heading-invot">Uttrakhand Culture?</span></h1>
-        <h2>Know About the Culture of Uttarakhand</h2>
+        <h1 class="hero-heading">What is <span class="heading-invot">Uttrakhand's Culture?</span></h1>
+        <h3>Know About the Culture of Uttarakhand</h3>
     </header>
     <!-- <div class="box"> -->
-        <p><b>Uttarakhand</b>, also known as <i><b>Dev Bhoomi</b></i>, has been the centre of religious and spiritual
-            knowledge for ages. The history and culture of Uttarakhand are deeply connected with religion and celebrated
-            everywhere. Many cultures and ethnicities coexist here with peace and harmony. Most of the state is divided
-            into two regions named Garhwal and Kumaon. It is also home to Jaunsaries, Tibetan refugees, Bokshas, among
-            others.</p>
+    <p style="text-align: left ;">
+        <b>Uttarakhand</b>, also known as <i><b>Dev Bhoomi</b></i>, has been the centre of religious and spiritual
+        knowledge for ages. The history and culture of Uttarakhand are deeply connected with religion and celebrated
+        everywhere. Many cultures and ethnicities coexist here with peace and harmony. Most of the state is divided
+        into two regions named Garhwal and Kumaon. It is also home to Jaunsaries, Tibetan refugees, Bokshas, among
+        others.</p>
 
-        <div class ="box">
-        <img class="hero-image" src="images/cul.jpeg"  />
+    <div class="box">
+        <img class="hero-image" src="images/cul.jpeg" />
         <img class="hero-image" src="images/cul4.jpeg" />
         <img class="hero-image" src="images/cul1.jpeg" />
     </div>
 
-        <p><b>Uttarakhand</b> has a <b><i>'Pahari'</i></b> culture. Folk dance, music and festivals are a huge part of
-            Uttarakhand culture. The land is blessed with the beauty of the Himalayas and ancient temples. Festivals.
-            The typical Hindu festivals such as Diwali, Holi and Navratri are celebrated here with much zeal
-        </p>
-  
+    <p style="text-align: left ;">
+        <b>Uttarakhand</b> has a <b><i>'Pahari'</i></b> culture. Folk dance, music and festivals are a huge part of
+        Uttarakhand culture. The land is blessed with the beauty of the Himalayas and ancient temples. Festivals.
+        The typical Hindu festivals such as Diwali, Holi and Navratri are celebrated here with much zeal
+    </p>
+
     <header class="hero">
         <h1 class="hero-heading">What is the <span class="heading-invot">Lifestyle of Uttarakhand?</span></h1>
-        <h2>Know About the lifestyle of Uttarakhand
-        </h2>
+        <h3>Know About the lifestyle of Uttarakhand
+        </h3>
     </header>
 
-        <p>
-
-            The signs of the practise of Shaivism in ancient times along with Buddhism and Folk Shamanic religion was
-            also found in the state. Famed for their <b>simple lifestyle</b>, honesty, and humility, the people of
-            Uttarakhand reflect a sincere bond with nature and gods.</p>
-        <div class="box">
-            <img class="hero-image" src="images/style.jpeg" style="position: relative; padding:30px" />
-        </div>
-
- 
+    <p style="text-align: left ;">
 
 
+        The signs of the practise of Shaivism in ancient times along with Buddhism and Folk Shamanic religion was
+        also found in the state. Famed for their <b>simple lifestyle</b>, honesty, and humility, the people of
+        Uttarakhand reflect a sincere bond with nature and gods.</p>
+    <div class="box">
+        <img class="hero-image" src="images/style.jpeg" style="position: relative; padding:30px" />
+        <img class="hero-image" src="images/clta.jpeg" style="position: relative; padding:30px" />
 
-    <!-- <h2>Incomprehensibility or readability? That is the question.
-    </h2>
+    </div>
+
+
+
+    <header class="hero">
+        <h1 class="hero-heading">What is the <span class="heading-invot">Uttarakhand Language?</span></h1>
+        <h3>Know About Uttarakhand's Language
+        </h3>
+    </header>
+
     <p>
-        The most well-known dummy text is the 'Lorem Ipsum', which is said to
-        have originated in the 16th century. Lorem Ipsum is composed in a
-        pseudo-Latin language which more or less corresponds to 'proper' Latin.
-        It contains a series of real Latin words. This ancient dummy text is
-        also incomprehensible, but it imitates the rhythm of most European
-        languages in Latin script. The advantage of its Latin origin and the
-        relative meaninglessness of Lorum Ipsum is that the text does not
-        attract attention to itself or distract the viewer's attention from the
-        layout.
-    </p> -->
+        Most of the people of Uttarakhand speak Indo-Aryan languages. Hindi is the official language of the state.
+        Hindustani, which contains words from both Hindi and Urdu, is the principal spoken language. Other languages
+        used in Uttarakhand include <b>Garhwali and Kumauni</b> (both Pahari languages), Punjabi, and Nepali.
+        </p>
 
-    <br>
-    <footer class="footer">
-        <div class="footer-header">Social Media presence</div>
-        <ul class="social-link list-non-bulit">
-            <li class="list-item-inline">
-                <a class="link" href="https://github.com/Himani1010">
-                    <img class="link" src="images/git_logo.png" height="70px" width="90px" style="position: relative; left:50px"/>
 
-                </a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/himani-palariya-58995a225">
-                    <img class="link" src="images/in_logo.png" height="70px" width="90px" />
+        <header class="hero">
+            <h1 class="hero-heading">Why I like  <span class="heading-invot">Uttrakhand?</span></h1>
+            <h3>Uttarakhand</h3>
+        </header>
+        <!-- <div class="box"> -->
+        <p style="text-align: left ;">
+            It is often referred to as the <b>"Devbhumi"</b> (literally "Land of the Gods") due to its religious significance and numerous Hindu temples and pilgrimage centres found throughout the state. Uttarakhand is known for the <b>natural environment</b> of the Himalayas, the Bhabar and the Terai regions.</p>
+        <div class="box">
+            <img class="hero-image" src="images/uk.jpeg" />
+            <img class="hero-image" src="images/uk1.jpeg" />
+            <img class="hero-image" src="images/uk2.jpeg" />
+        </div>
+        <br>
+        <footer class="footer">
+            <div class="footer-header">Social Media presence</div>
+            <ul class="social-link list-non-bulit">
+                <li class="list-item-inline">
+                    <a class="link" href="https://github.com/Himani1010">
+                        <img class="link" src="images/git_logo.png" height="70px" width="90px"
+                            style="position: relative; left:50px" />
 
-                </a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/himani_palariya?t=G0-DNNf0f6_e81qFnfPG_w&s=08">
-                    <img class="link" src="images/twi_logo.png" height="70px" width="90px" style="position: relative; right:50px"/>
-                </a>
-            </li>
-        </ul>
-    </footer>
+                    </a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="link" href="https://www.linkedin.com/in/himani-palariya-58995a225">
+                        <img class="link" src="images/in_logo.png" height="70px" width="90px" />
+
+                    </a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="link" href="https://twitter.com/himani_palariya?t=G0-DNNf0f6_e81qFnfPG_w&s=08">
+                        <img class="link" src="images/twi_logo.png" height="70px" width="90px"
+                            style="position: relative; right:50px" />
+                    </a>
+                </li>
+            </ul>
+        </footer>
 
 
 
