--- a/blog.html
+++ b/blog.html
@@ -75,8 +75,8 @@
                     <img class="hero-image" src="images/nainital.jpeg" />
                     <br>
                     <br>
-
-                    <a class="link link-primary" href="">Read More</a>
+    
+                    <a class="link link-primary" href="https://hashnode.com/post/why-is-nainital-so-famous-ckwzvaouh0eia69s16di0fx2z">Read More</a>
                 </li>
 
             </ul>
