--- a/my_page.html
+++ b/my_page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>blogs| kamiyabi</title>
+    <title>blogs</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -25,9 +25,9 @@
         others.</p>
 
     <div class="box">
-        <img class="hero-image" src="images/cul.jpeg" />
-        <img class="hero-image" src="images/cul4.jpeg" />
-        <img class="hero-image" src="images/cul1.jpeg" />
+        <img class="hero-image" src="images/cul.jpeg" style="padding-top: 30px;"     />
+        <!-- <img class="hero-image" src="images/cul4.jpeg" /> -->
+        <img class="hero-image" src="images/cul1.jpeg" style="padding-top: 30px;" />
     </div>
 
     <p style="text-align: left ;">
@@ -77,9 +77,9 @@
         <p style="text-align: left ;">
             It is often referred to as the <b>"Devbhumi"</b> (literally "Land of the Gods") due to its religious significance and numerous Hindu temples and pilgrimage centres found throughout the state. Uttarakhand is known for the <b>natural environment</b> of the Himalayas, the Bhabar and the Terai regions.</p>
         <div class="box">
-            <img class="hero-image" src="images/uk.jpeg" />
-            <img class="hero-image" src="images/uk1.jpeg" />
-            <img class="hero-image" src="images/uk2.jpeg" />
+            <img class="hero-image" src="images/uk.jpeg" style="padding-top: 30px;" />
+            <!-- <img class="hero-image" src="images/uk1.jpeg" /> -->
+            <img class="hero-image" src="images/uk2.jpeg" style="padding-top:30px ;" />
         </div>
         <br>
         <footer class="footer">
