--- a/project.html
+++ b/project.html
@@ -101,7 +101,7 @@
                     <p>Do you read books? You would find some good recommendations for all the genre. Made using ReactJS
                         with love.</p>
                     <br>
-                    <a class="link link-primary" href="https://8078i.csb.app/">Live project</a>
+                    <a class="link link-primary" href="https://bjco9.csb.app//">Live project</a>
                     <a class="link link-secondary" href="https://github.com/Himani1010/Neog_mark9th">view source</a>
                 </li>
             </div>
